footer and header

--- a/index.html
+++ b/index.html
@@ -6,42 +6,80 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <title>Bootstrap</title>
     </head>
+    <header class="sticky-top">
+        <nav class="navbar bg-body-tertiary py-4 bg-success-subtle">
+            <div class="container-fluid">
+              <a class="navbar-brand text-black" href="#">YOGA</a>
+            </div>
+          </nav>
+    </header>
     <body>
         <div class="container p-3 mb-2 alert alert-light text-center mh-100 border">
             <h1>A warm welcome!</h1>
-            <p>Bootstrap utility classes are used to create this jumbotron since the old component has been</p>
-            <p>removed from the framework. Why create custom CSS when you can use utilities?</p>
-            <button class="btn btn-primary">call to action</button>
+            <p>Choose your best yoga center.</p>
+            <p>Yoga is the ancient practice of mind and body that combines physical postures, breathing techniques and meditation. The practice finds its origins in India, dating back to 3000 BC and is believed to have been developed by the sages of the Indus Saraswati Valley civilization.</p>
         </div>
-        <div class="row md-1 justify-content-center">
+        <div class="row justify-content-center">
              <div class="col-md-3 col-md-2-5 alert-light">
-                <div class="card">
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="card h-100" style="width: 25rem;">
+                    <img src="images/Frame.png" class="card-img-top" alt="woman doing yoga" style="height:60%;"> 
+                    <div class="card-body bg-success-subtle">
+                        <h5 class="card-title">Yoga</h5>
+                        <p class="card-text">Yoga Know how is an educational project for people who want to know more about Yoga than just poses. It is meant for those seeking to increase their awareness.</p>
+                        <a href="#" class="btn btn-primary">Join</a>
                     </div>
                 </div>
              </div>
              <div class="col-md-3 col-md-2-5 alert-light">
-                <div class="card">
-                    <div class="card-body">
-
+                <div class="card h-100" style="width: 25rem;">
+                    <img src="images/Frame2.png" class="img-fluid img-center" alt="woman doing yoga" style="height:100%;"> 
+                    <div class="card-body bg-success-subtle">
+                        <h5 class="card-title">Yoga</h5>
+                        <p class="card-text">Our purpose is to make contact with all the pillars of the Yoga cosmos. In addition to Pranayama, we plan to continue working on asana’s (poses), mantras and meditation videos. We set up a toolbox with those pillars, in order to build </p>
+                        <a href="#" class="btn btn-primary">Join</a>
+                    </div>
+                </div>
+             </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-3 col-md-2-5 alert-light">
+                <div class="card h-100" style="width: 25rem;">
+                    <img src="images/Frame3.png" class="card-img-top" alt="woman doing yoga" style="height: 100%;"> 
+                    <div class="card-body bg-success-subtle">
+                        <h5 class="card-title">Yoga</h5>
+                        <p class="card-text">A good mind-set and a healthy body contribute to a better life. Our aim as a team is to provide the tools how to apply this knowledge in daily life.</p>
+                        <a href="#" class="btn btn-primary">Join</a>
                     </div>
                 </div>
              </div>
              <div class="col-md-3 col-md-2-5 alert-light">
-                <div class="card">
-                    <div class="card-body">
-
+                <div class="card h-100" style="width: 25rem;">
+                    <img src="images/Frame4.png" class="card-img-top" alt="woman doing yoga" style="height:100%;"> 
+                    <div class="card-body bg-success-subtle">
+                        <h5 class="card-title">Yoga</h5>
+                        <p class="card-text">A good mind-set and a healthy body contribute to a better life. Our aim as a team is to provide the tools how to apply this knowledge in daily life.</p>
+                        <a href="#" class="btn btn-primary">Join</a>
                     </div>
                 </div>
              </div>
         </div>
-        <div class="row">
-            
-        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-3 col-md-2-5 alert-light">
+               <div class="card h-80" style="width: 25rem;">
+                   <img src="images/Frame1.png" class="card-img-top" alt="woman doing yoga" style="height:100%;"> 
+                   <div class="card-body bg-success-subtle" style="height:50%;">
+                       <h5 class="card-title">Yoga</h5>
+                       <p class="card-text">Yoga Know how is an educational project for people who want to know more about Yoga than just poses. It is meant for those seeking to increase their awareness.</p>
+                       <a href="#" class="btn btn-primary">Join</a>
+                   </div>
+               </div>
+            </div>
+       </div>
+        <footer class="py-2 bg-success-subtle text-center " style="margin-top:10px;">
+            <div class="footer">
+                <p style="">created by@vasavi</p>
+            </div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
